--- a/explicacion.html
+++ b/explicacion.html
@@ -8,7 +8,7 @@
       href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./dist/css/style.css" />
     <link
       rel="stylesheet"
       href="./node_modules/@flaticon/flaticon-uicons/css/all/all.css"
