--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                         <!-----------------------------------2--------------------------------------------->
                         <div class="col-md-4 mb-3">
-                            <div class="card d-flex flex-column">
+                            <div class="card h-100 d-flex flex-column">
                                 <img class="card-img-top" src="/Img/gestion.jpg" alt="Card image cap" />
                                 <div class="card-body d-flex flex-column justify-content-center text-center">
                                     <h5 class="card-title">Gestión de proyectos</h5>
