Se arreglo algunos detalles de resposive

--- a/explicacion.html
+++ b/explicacion.html
@@ -100,7 +100,7 @@
   </header>
 
   <main>
-    <section class="d-flex justify-content-center align-items-center back-image-sec1" style="height: 50vh">
+    <section class="d-flex justify-content-center align-items-center back-image-sec1" >
       <div class="container my-3 row gx-5 justify-content-center">
         <div class="col-lg-10 text-shadow">
           <h1 class="text-center fs-3 text-white fw-bold">
