--- a/explicacion.html
+++ b/explicacion.html
@@ -305,7 +305,8 @@
             </li>
           </ul>
           <div class="d-flex justify-content-center align-items-center">
-            <a class="btn btn-primary btn-lg px-4" href="formulario.html">Llenar Formulario de construcción</a>
+            <a class="btn btn-primary btn-lg px-4 me-2" href="formulario.html">Llenar Formulario de construcción</a>
+            <a class="btn btn-success btn-lg px-4 ms-2" href="formulario.html">Descargar Formulario de construcción</a>
           </div>
         </div>
       </div>
