--- a/formulario.html
+++ b/formulario.html
@@ -98,6 +98,14 @@
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
+                    <a class="dropdown-item" href="pdfFormulario/FormularioPagina.pdf" download="FormularioPermisoConstruccion"
+                      >Descargar formulario de construcción</a
+                    >
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
                     <a class="dropdown-item" href="#"
                       >Realizacion de proyectos</a
                     >
@@ -219,12 +227,18 @@
               </div>
               <button
                 type="button"
-                class="mb-5 btn btn-primary col-lg-2"
+                class="mb-5 btn btn-primary btn-lg col-lg-2"
                 id="enviarBtn"
               >
                 Enviar
               </button>
             </form>
+            <p>O si desea puede descargar el formulario y enviarlo luego al correo ConstruVision@una.ac.cr.</p>
+            
+              <a class="btn btn-success btn-lg px-4" href="pdfFormulario/FormularioPagina.pdf" download="FormularioPermisoConstruccion"
+                >Descargar Formulario de construcción</a
+              >
+            
           </div>
         </section>
       </article>
