--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                                 <li>
                                     <a class="dropdown-item" href="formulario.html">Formulario de construcción</a>
                                 </li>
+                                 <li>
+                                    <hr class="dropdown-divider" />
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="pdfFormulario/FormularioPagina.pdf" download="FormularioPermisoConstruccion">Descargar formulario de construcción</a>
+                                </li>
                                 <li>
                                     <hr class="dropdown-divider" />
                                 </li>
